[package]
name = "in-wgpu"
version = "0.1.0"
edition = "2021"

[dependencies]
raw-window-handle = "0.4.2"
# until 0.35.2 is bumped
sdl2 = { git = "https://github.com/Rust-SDL2/rust-sdl2", features = ["raw-window-handle"] }
wgpu = "0.12.0"

anyhow = "1.0.52"
bytemuck = { version = "1.7.3", features = ["derive"] }
env_logger = "0.9.0"
image = "0.23.14"
log = "0.4.14"
pollster = "0.2.4"
vek = { version = "0.15.4", features = ["bytemuck"] }

# until we don't need the window hack (see `window.rs`)
[target.'cfg(target_os = "macos")'.dependencies.objc]
version = "0.2.7"

